# phonebook-gui

./: Cargo.toml
src/: database.rs  entry.rs  main.rs
